unpackaged/main/default/objects/User_Performance__c/User_Performance__c.object-meta.xml
<CustomObject>
    <label>User Performance</label>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>User Performance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Users Performance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>