unpackaged/main/default/objects/User_Performance__c/fields/Attitude__c.field-meta.xml
<CustomField>
    <fullName>Attitude__c</fullName>
    <description>Was the employee polite, courteous, positive and helpful?</description>
    <inlineHelpText>Was the employee polite, courteous, positive and helpful?</inlineHelpText>
    <label>Attitude</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>