unpackaged/main/default/objects/User_Performance__c/fields/Attitude_Notes__c.field-meta.xml
<CustomField>
    <fullName>Attitude_Notes__c</fullName>
    <label>Attitude Notes</label>
    <type>TextArea</type>
</CustomField>