unpackaged/main/default/objects/User_Performance__c/fields/Call_Effectiveness_Notes__c.field-meta.xml
<CustomField>
    <fullName>Call_Effectiveness_Notes__c</fullName>
    <label>Call Effectiveness Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>