unpackaged/main/default/objects/User_Performance__c/fields/Call_Effectiveness_Number_of_Fields__c.field-meta.xml
<CustomField>
    <fullName>Call_Effectiveness_Number_of_Fields__c</fullName>
    <formula>IF(ISBLANK(TEXT(Greeting_and_Introduction__c )),0,1) + IF(ISBLANK(TEXT(Language__c)),0,1) + IF(ISBLANK(TEXT(Control__c)),0,1) + IF(ISBLANK(TEXT(Tone_of_Voice__c)),0,1)  + IF(ISBLANK(TEXT(Pacing__c)),0,1) + IF(ISBLANK(TEXT(Attitude__c)),0,1) + IF(ISBLANK(TEXT(Questioning__c)),0,1) + IF(ISBLANK(TEXT(Product_Knowledge__c)),0,1) + IF(ISBLANK(TEXT(Negotiation__c)),0,1) + IF(ISBLANK(TEXT(Urgency_and_Closing__c)),0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Effectiveness Number of Fields</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>