unpackaged/main/default/objects/User_Performance__c/fields/Call_Effectiveness_Score__c.field-meta.xml
<CustomField>
    <fullName>Call_Effectiveness_Score__c</fullName>
    <formula>VALUE(BLANKVALUE(TEXT(Greeting_and_Introduction__c), &#39;0&#39;))+
VALUE(BLANKVALUE(TEXT(Language__c), &#39;0&#39;))+
VALUE(BLANKVALUE(TEXT(Control__c), &#39;0&#39;))+
VALUE(BLANKVALUE(TEXT(Tone_of_Voice__c), &#39;0&#39;))+
VALUE(BLANKVALUE(TEXT(Pacing__c), &#39;0&#39;))+
VALUE(BLANKVALUE(TEXT(Attitude__c), &#39;0&#39;))+
VALUE(BLANKVALUE(TEXT(Questioning__c), &#39;0&#39;))+
VALUE(BLANKVALUE(TEXT(Product_Knowledge__c), &#39;0&#39;))+
VALUE(BLANKVALUE(TEXT(Negotiation__c), &#39;0&#39;))+
VALUE(BLANKVALUE(TEXT(Urgency_and_Closing__c), &#39;0&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Effectiveness Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>