unpackaged/main/default/objects/User_Performance__c/fields/Call_Effectiveness_Score_Average__c.field-meta.xml
<CustomField>
    <fullName>Call_Effectiveness_Score_Average__c</fullName>
    <label>Call Effectiveness Score Average</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>