unpackaged/main/default/objects/User_Performance__c/fields/Call_Effectiveness_Score_Avg__c.field-meta.xml
<CustomField>
    <fullName>Call_Effectiveness_Score_Avg__c</fullName>
    <formula>IF( Call_Effectiveness_Score__c &gt;= 1,  
 Call_Effectiveness_Score__c  /  Call_Effectiveness_Number_of_Fields__c 				, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Effectiveness Score Avg</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>