unpackaged/main/default/objects/User_Performance__c/fields/Control__c.field-meta.xml
<CustomField>
    <fullName>Control__c</fullName>
    <description>Did the employee take control of the call and lead in a positive manner?</description>
    <inlineHelpText>Did the employee take control of the call and lead in a positive manner?</inlineHelpText>
    <label>Control</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>