unpackaged/main/default/objects/User_Performance__c/fields/Control_Notes__c.field-meta.xml
<CustomField>
    <fullName>Control_Notes__c</fullName>
    <label>Control Notes</label>
    <type>TextArea</type>
</CustomField>