unpackaged/main/default/objects/User_Performance__c/fields/Email_Quoting__c.field-meta.xml
<CustomField>
    <fullName>Email_Quoting__c</fullName>
    <description>Is the spelling and grammar appropriate, well constructed and accurate?</description>
    <inlineHelpText>Is the spelling and grammar appropriate, well constructed and accurate?</inlineHelpText>
    <label>Email / Quoting Spelling and Grammar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>