unpackaged/main/default/objects/User_Performance__c/fields/Email_Quoting_Effectiveness_Fields__c.field-meta.xml
<CustomField>
    <fullName>Email_Quoting_Effectiveness_Fields__c</fullName>
    <formula>IF(ISBLANK(TEXT( Email_Quoting_Language__c  )),0,1) + IF(ISBLANK(TEXT( Email_Quoting__c )),0,1) + IF(ISBLANK(TEXT( Email_Quoting_Tone_of_Email__c )),0,1) + IF(ISBLANK(TEXT( Email_Quoting_Formatting__c )),0,1) + IF(ISBLANK(TEXT( Email_Quoting_Flow__c )),0,1) + IF(ISBLANK(TEXT( Email_Quoting_Options__c )),0,1) + IF(ISBLANK(TEXT( Email_Quoting_Product_Knowledge__c )),0,1) + IF(ISBLANK(TEXT( Email_Quoting_Pricing__c )),0,1) + IF(ISBLANK(TEXT( Email_Quoting_Recommendations__c )),0,1) + IF(ISBLANK(TEXT( Email_Quoting_Urgency_and_Closing__c )),0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email / Quoting Effectiveness Fields</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>