unpackaged/main/default/objects/User_Performance__c/fields/Email_Quoting_Effectiveness_Notes__c.field-meta.xml
<CustomField>
    <fullName>Email_Quoting_Effectiveness_Notes__c</fullName>
    <label>Email / Quoting Effectiveness Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>