unpackaged/main/default/objects/User_Performance__c/fields/Email_Quoting_Effectiveness_Score__c.field-meta.xml
<CustomField>
    <fullName>Email_Quoting_Effectiveness_Score__c</fullName>
    <formula>VALUE(BLANKVALUE(TEXT( Email_Quoting_Language__c ), &#39;0&#39;))+
VALUE(BLANKVALUE(TEXT(  Email_Quoting__c  ), &#39;0&#39;))+
VALUE(BLANKVALUE(TEXT( Email_Quoting_Tone_of_Email__c ), &#39;0&#39;))+
VALUE(BLANKVALUE(TEXT( Email_Quoting_Formatting__c ), &#39;0&#39;))+
VALUE(BLANKVALUE(TEXT( Email_Quoting_Flow__c ), &#39;0&#39;))+
VALUE(BLANKVALUE(TEXT( Email_Quoting_Options__c ), &#39;0&#39;))+
VALUE(BLANKVALUE(TEXT( Email_Quoting_Product_Knowledge__c ), &#39;0&#39;))+
VALUE(BLANKVALUE(TEXT( Email_Quoting_Pricing__c ), &#39;0&#39;))+
VALUE(BLANKVALUE(TEXT( Email_Quoting_Recommendations__c ), &#39;0&#39;))+
VALUE(BLANKVALUE(TEXT( Email_Quoting_Urgency_and_Closing__c ), &#39;0&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email / Quoting Effectiveness Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>