unpackaged/main/default/objects/User_Performance__c/fields/Email_Quoting_Effectiveness_Score_Ave__c.field-meta.xml
<CustomField>
    <fullName>Email_Quoting_Effectiveness_Score_Ave__c</fullName>
    <label>Email / Quoting Effectiveness Score Ave.</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>