unpackaged/main/default/objects/User_Performance__c/fields/Email_Quoting_Effectiveness_Score_Avg__c.field-meta.xml
<CustomField>
    <fullName>Email_Quoting_Effectiveness_Score_Avg__c</fullName>
    <formula>IF(( Email_Quoting_Effectiveness_Score__c &gt;= 1), ( Email_Quoting_Effectiveness_Score__c /  Email_Quoting_Effectiveness_Fields__c )  , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email / Quoting Effectiveness Score Avg</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>