unpackaged/main/default/objects/User_Performance__c/fields/Email_Quoting_Flow__c.field-meta.xml
<CustomField>
    <fullName>Email_Quoting_Flow__c</fullName>
    <description>Do emails read well, are to the point and easy to interpret?</description>
    <inlineHelpText>Do emails read well, are to the point and easy to interpret?</inlineHelpText>
    <label>Email / Quoting Flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>