unpackaged/main/default/objects/User_Performance__c/fields/Email_Quoting_Formatting__c.field-meta.xml
<CustomField>
    <fullName>Email_Quoting_Formatting__c</fullName>
    <description>Are emails well formatted?  Are all of the options presented in the same way?</description>
    <inlineHelpText>Are emails well formatted?  Are all of the options presented in the same way?</inlineHelpText>
    <label>Email / Quoting Formatting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>