unpackaged/main/default/objects/User_Performance__c/fields/Email_Quoting_Language__c.field-meta.xml
<CustomField>
    <fullName>Email_Quoting_Language__c</fullName>
    <description>Do emails demonstrate a good vocabulary and use professional business language?</description>
    <inlineHelpText>Do emails demonstrate a good vocabulary and use professional business language?</inlineHelpText>
    <label>Email / Quoting Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>