unpackaged/main/default/objects/User_Performance__c/fields/Email_Quoting_Language_Notes__c.field-meta.xml
<CustomField>
    <fullName>Email_Quoting_Language_Notes__c</fullName>
    <label>Email / Quoting Language Notes</label>
    <type>TextArea</type>
</CustomField>