unpackaged/main/default/objects/User_Performance__c/fields/Email_Quoting_Options__c.field-meta.xml
<CustomField>
    <fullName>Email_Quoting_Options__c</fullName>
    <description>Are the options well thought out, relevant and suitable to the enquiries?  Do all of the links work?  Are distances included with maps?</description>
    <inlineHelpText>Are the options well thought out, relevant and suitable to the enquiries?  Do all of the links work?  Are distances included with maps?</inlineHelpText>
    <label>Email / Quoting Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>