unpackaged/main/default/objects/User_Performance__c/fields/Email_Quoting_Options_Notes__c.field-meta.xml
<CustomField>
    <fullName>Email_Quoting_Options_Notes__c</fullName>
    <label>Email / Quoting Options Notes</label>
    <type>TextArea</type>
</CustomField>