unpackaged/main/default/objects/User_Performance__c/fields/Email_Quoting_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Email_Quoting_Pricing__c</fullName>
    <description>Is the pricing uniform, relevant, correct and containing details of any taxes / additional charges?</description>
    <inlineHelpText>Is the pricing uniform, relevant, correct and containing details of any taxes / additional charges?</inlineHelpText>
    <label>Email / Quoting Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>