unpackaged/main/default/objects/User_Performance__c/fields/Email_Quoting_Product_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Email_Quoting_Product_Knowledge__c</fullName>
    <description>Do emails show good product and service knowledge?  Are all of the facilities, transport links other relevant information included?</description>
    <inlineHelpText>Do emails show good product and service knowledge?  Are all of the facilities, transport links other relevant information included?</inlineHelpText>
    <label>Email / Quoting Product Knowledge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>