unpackaged/main/default/objects/User_Performance__c/fields/Email_Quoting_Product_Knowledge_Notes__c.field-meta.xml
<CustomField>
    <fullName>Email_Quoting_Product_Knowledge_Notes__c</fullName>
    <label>Email / Quoting Product Knowledge Notes</label>
    <type>TextArea</type>
</CustomField>