unpackaged/main/default/objects/User_Performance__c/fields/Email_Quoting_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Email_Quoting_Recommendations__c</fullName>
    <description>Do emails contain good relevant recommendations?</description>
    <inlineHelpText>Do emails contain good relevant recommendations?</inlineHelpText>
    <label>Email / Quoting Recommendations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>