unpackaged/main/default/objects/User_Performance__c/fields/Email_Quoting_Spelling_Grammar_Notes__c.field-meta.xml
<CustomField>
    <fullName>Email_Quoting_Spelling_Grammar_Notes__c</fullName>
    <label>Email / Quoting Spelling &amp; Grammar Notes</label>
    <type>TextArea</type>
</CustomField>