unpackaged/main/default/objects/User_Performance__c/fields/Email_Quoting_Tone_of_Email__c.field-meta.xml
<CustomField>
    <fullName>Email_Quoting_Tone_of_Email__c</fullName>
    <description>Is the tone friendly, engaged and interesting?</description>
    <inlineHelpText>Is the tone friendly, engaged and interesting?</inlineHelpText>
    <label>Email / Quoting Tone of Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>