unpackaged/main/default/objects/User_Performance__c/fields/Email_Quoting_Tone_of_Email_Notes__c.field-meta.xml
<CustomField>
    <fullName>Email_Quoting_Tone_of_Email_Notes__c</fullName>
    <label>Email / Quoting Tone of Email Notes</label>
    <type>TextArea</type>
</CustomField>