unpackaged/main/default/objects/User_Performance__c/fields/Email_Quoting_Urgency_and_Closing__c.field-meta.xml
<CustomField>
    <fullName>Email_Quoting_Urgency_and_Closing__c</fullName>
    <description>Is there generally a call to action in the email and are next actions confirmed?</description>
    <inlineHelpText>Is there generally a call to action in the email and are next actions confirmed?</inlineHelpText>
    <label>Email / Quoting Urgency and Closing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>