unpackaged/main/default/objects/User_Performance__c/fields/Employment_Band__c.field-meta.xml
<CustomField>
    <fullName>Employment_Band__c</fullName>
    <description>Executive - 1, Senior Executive - 2, Account Manager - 3, Senior Account Manager - 4, Head of / Country - 5, Director - 6</description>
    <label>Employment Band</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>