unpackaged/main/default/objects/User_Performance__c/fields/Greeting_and_Introduction__c.field-meta.xml
<CustomField>
    <fullName>Greeting_and_Introduction__c</fullName>
    <description>Did the employee introduce themselves and the company correctly, greet the client and wait for a response?</description>
    <inlineHelpText>Did the employee introduce themselves and the company correctly, greet the client and wait for a response?</inlineHelpText>
    <label>Greeting and Introduction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>