unpackaged/main/default/objects/User_Performance__c/fields/Greeting_and_Introduction_Notes__c.field-meta.xml
<CustomField>
    <fullName>Greeting_and_Introduction_Notes__c</fullName>
    <label>Greeting and Introduction Notes</label>
    <type>TextArea</type>
</CustomField>