unpackaged/main/default/objects/User_Performance__c/fields/Issue_Resolution_Response_Time_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Issue_Resolution_Response_Time_Achieved__c</fullName>
    <description>Actual number of minutes it took to partially resolve issue during period</description>
    <inlineHelpText>Actual number of minutes it took to partially resolve issue during period</inlineHelpText>
    <label>Issue Resolution Response Time Achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>