unpackaged/main/default/objects/User_Performance__c/fields/Issue_Resolution_Response_Time_Target__c.field-meta.xml
<CustomField>
    <fullName>Issue_Resolution_Response_Time_Target__c</fullName>
    <description>Target number of minutes to resolve issues during period</description>
    <inlineHelpText>Target number of minutes to resolve issues during period</inlineHelpText>
    <label>Issue Resolution Response Time Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>