unpackaged/main/default/objects/User_Performance__c/fields/Issue_Resolution_Time_Vs_Target__c.field-meta.xml
<CustomField>
    <fullName>Issue_Resolution_Time_Vs_Target__c</fullName>
    <formula>Issue_Resolution_Response_Time_Target__c / Issue_Resolution_Response_Time_Achieved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue Resolution % Time Vs Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>