unpackaged/main/default/objects/User_Performance__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Did the employee demonstrate a good vocabulary and use professional business language?</description>
    <inlineHelpText>Did the employee demonstrate a good vocabulary and use professional business language?</inlineHelpText>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>