unpackaged/main/default/objects/User_Performance__c/fields/Language_Notes__c.field-meta.xml
<CustomField>
    <fullName>Language_Notes__c</fullName>
    <label>Language Notes</label>
    <type>TextArea</type>
</CustomField>