unpackaged/main/default/objects/User_Performance__c/fields/Local_Time_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Local_Time_Conversion__c</fullName>
    <formula>No_of_Local_Time_Bookings__c  /  Number_of_Local_Time_Enquiries__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Time Conversion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>