unpackaged/main/default/objects/User_Performance__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Period Review Month</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Month</valueSetName>
    </valueSet>
</CustomField>