unpackaged/main/default/objects/User_Performance__c/fields/Months_from_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Months_from_Start_Date__c</fullName>
    <description>How many months since employee started.  1 is always the month the person begins their employment irrespective of date within the month</description>
    <inlineHelpText>How many months since employee started.  1 is always the month the person begins their employment irrespective of date within the month</inlineHelpText>
    <label>Months from Start Date</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>