unpackaged/main/default/objects/User_Performance__c/fields/Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Negotiation__c</fullName>
    <description>Did the employee negotiate effectively in terms of price, speed of response, time and process for decision?</description>
    <inlineHelpText>Did the employee negotiate effectively in terms of price, speed of response, time and process for decision?</inlineHelpText>
    <label>Negotiation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>