unpackaged/main/default/objects/User_Performance__c/fields/Negotiation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Notes__c</fullName>
    <label>Negotiation Notes</label>
    <type>TextArea</type>
</CustomField>