unpackaged/main/default/objects/User_Performance__c/fields/No_of_Local_Time_Bookings__c.field-meta.xml
<CustomField>
    <fullName>No_of_Local_Time_Bookings__c</fullName>
    <description>Number of local time bookings confirmed in month reporting on</description>
    <inlineHelpText>Number of local time bookings confirmed in month reporting on</inlineHelpText>
    <label>No. of Local Time Bookings</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>