unpackaged/main/default/objects/User_Performance__c/fields/No_of_Other_Time_Enquiries__c.field-meta.xml
<CustomField>
    <fullName>No_of_Other_Time_Enquiries__c</fullName>
    <description>Number of other time enquiries handled in month reporting on</description>
    <inlineHelpText>Number of other time enquiries handled in month reporting on</inlineHelpText>
    <label>No. of Other Time Enquiries</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>