unpackaged/main/default/objects/User_Performance__c/fields/Number_of_Local_Time_Enquiries__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Local_Time_Enquiries__c</fullName>
    <description>Number of local time enquiries handled in month reporting on</description>
    <inlineHelpText>Number of local time enquiries handled in month reporting on</inlineHelpText>
    <label>No. of Local Time Enquiries</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>