unpackaged/main/default/objects/User_Performance__c/fields/Other_Time_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Other_Time_Conversion__c</fullName>
    <formula>No_of_Other_Time_Bookings__c  /  No_of_Other_Time_Enquiries__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Time Conversion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>