unpackaged/main/default/objects/User_Performance__c/fields/Pacing__c.field-meta.xml
<CustomField>
    <fullName>Pacing__c</fullName>
    <description>Was the pace of the call suitable and well timed?</description>
    <inlineHelpText>Was the pace of the call suitable and well timed?</inlineHelpText>
    <label>Pacing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>