unpackaged/main/default/objects/User_Performance__c/fields/Pacing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pacing_Notes__c</fullName>
    <label>Pacing Notes</label>
    <type>TextArea</type>
</CustomField>