unpackaged/main/default/objects/User_Performance__c/fields/Period_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Period_Review_Date__c</fullName>
    <description>Put the last date of the month the review if for.  For example, if you are reviewing performance of May but the actual date is in June you would enter 31/05</description>
    <inlineHelpText>Put the last date of the month the review if for.  For example, if you are reviewing performance of May but the actual date is in June you would enter 31/05</inlineHelpText>
    <label>Period Review Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>