unpackaged/main/default/objects/User_Performance__c/fields/Personal_Conversion_Target__c.field-meta.xml
<CustomField>
    <fullName>Personal_Conversion_Target__c</fullName>
    <label>Conversion Target</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>