unpackaged/main/default/objects/User_Performance__c/fields/Personal_Response_Time_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Personal_Response_Time_Achieved__c</fullName>
    <description>Total time in minutes to quote enquiries over month</description>
    <inlineHelpText>Total time in minutes to quote enquiries over month</inlineHelpText>
    <label>Personal Response Time Achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>