unpackaged/main/default/objects/User_Performance__c/fields/Personal_Response_Time_Target__c.field-meta.xml
<CustomField>
    <fullName>Personal_Response_Time_Target__c</fullName>
    <description>Actual response time in minutes during period</description>
    <label>Personal Response Time Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>