unpackaged/main/default/objects/User_Performance__c/fields/Personal_Revenue_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Personal_Revenue_Achieved__c</fullName>
    <label>Personal Revenue Achieved</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>