unpackaged/main/default/objects/User_Performance__c/fields/Personal_Revenue_Target__c.field-meta.xml
<CustomField>
    <fullName>Personal_Revenue_Target__c</fullName>
    <formula>IF(ISPICKVAL( Employment_Band__c , &quot;6&quot;),0, If(ISPICKVAL(Months_from_Start_Date__c, &quot;1&quot;), 2500, If(ISPICKVAL(Months_from_Start_Date__c, &quot;2&quot;), 5000, If(ISPICKVAL(Months_from_Start_Date__c, &quot;3&quot;), 10000, IF(AND(ISPICKVAL(Months_from_Start_Date__c, &quot;4+&quot;), (ISPICKVAL( Employment_Band__c , &quot;2&quot;))), 20000, 17000)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Personal Revenue Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>