unpackaged/main/default/objects/User_Performance__c/fields/Personal_Revenue_Vs_Target__c.field-meta.xml
<CustomField>
    <fullName>Personal_Revenue_Vs_Target__c</fullName>
    <formula>Personal_Revenue_Achieved__c /  Personal_Revenue_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Personal Revenue % Vs Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>