unpackaged/main/default/objects/User_Performance__c/fields/Product_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Product_Knowledge__c</fullName>
    <description>Did the employee demonstrate good knowledge of SITU products and services?</description>
    <inlineHelpText>Did the employee demonstrate good knowledge of SITU products and services?</inlineHelpText>
    <label>Product Knowledge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>