unpackaged/main/default/objects/User_Performance__c/fields/Product_Knowledge_Notes__c.field-meta.xml
<CustomField>
    <fullName>Product_Knowledge_Notes__c</fullName>
    <label>Product Knowledge Notes</label>
    <type>TextArea</type>
</CustomField>