unpackaged/main/default/objects/User_Performance__c/fields/Questioning__c.field-meta.xml
<CustomField>
    <fullName>Questioning__c</fullName>
    <description>Did the employee use a good range of open and closed questions to fully understand the clients needs and address their concerns?</description>
    <inlineHelpText>Did the employee use a good range of open and closed questions to fully understand the clients needs and address their concerns?</inlineHelpText>
    <label>Questioning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>