unpackaged/main/default/objects/User_Performance__c/fields/Questioning_Notes__c.field-meta.xml
<CustomField>
    <fullName>Questioning_Notes__c</fullName>
    <label>Questioning Notes</label>
    <type>TextArea</type>
</CustomField>