unpackaged/main/default/objects/User_Performance__c/fields/Response_Time_Vs_Target__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_Vs_Target__c</fullName>
    <formula>Personal_Response_Time_Target__c / Personal_Response_Time_Achieved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Time % Vs Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>