unpackaged/main/default/objects/User_Performance__c/fields/Tone_of_Voice__c.field-meta.xml
<CustomField>
    <fullName>Tone_of_Voice__c</fullName>
    <description>Was the employees tone friendly, engaged and interesting?</description>
    <inlineHelpText>Was the employees tone friendly, engaged and interesting?</inlineHelpText>
    <label>Tone of Voice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>