unpackaged/main/default/objects/User_Performance__c/fields/Tone_of_Voice_Notes__c.field-meta.xml
<CustomField>
    <fullName>Tone_of_Voice_Notes__c</fullName>
    <label>Tone of Voice Notes</label>
    <type>TextArea</type>
</CustomField>