unpackaged/main/default/objects/User_Performance__c/fields/Total_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Total_Conversion__c</fullName>
    <formula>Total_Number_of_Bookings__c  /  Total_Number_of_Enquiries__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Conversion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>