unpackaged/main/default/objects/User_Performance__c/fields/Total_Number_of_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Bookings__c</fullName>
    <description>Total number of bookings confirmed in month being reported</description>
    <inlineHelpText>Total number of bookings confirmed in month being reported</inlineHelpText>
    <label>Total Number of Bookings</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>