unpackaged/main/default/objects/User_Performance__c/fields/Total_Number_of_Enquiries__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Enquiries__c</fullName>
    <description>Total number of enquiries handled in the month we are reporting on</description>
    <inlineHelpText>Total number of enquiries handled in the month we are reporting on</inlineHelpText>
    <label>Total Number of Enquiries</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>